<resources>
    <string name="app_name">ProjectApp</string>

    <string name="activity_type">Activity Type (e.g Bike, Run, Walk)</string>
    <string name="miles_completed">Miles Completed</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="create_activity">New Activity</string>
    <string name="registered_activities">All Activities</string>
</resources>
